# sales-etl-pipeline

./: Creacion de la BD.txt  main.py  pyproject.toml
extract/: extract_data.py
load/: insert_db.py
transform/: cleaning.py  validation.py
